src/test/deca/context/invalid/langage_essentiel/premiere_passe/regle_1_3_2.deca
// Description:
//    regle 1.3 condition
//
// Resultats:
//    Ligne 6: A class identifier is required.
class A extends int {
}
// raison : condition
// message : «A class identifier is required»
